--- a/mtg/index.html
+++ b/mtg/index.html
@@ -25,9 +25,11 @@
         <div class="content">
             <div id="cardsContainer">
                 <div id="deck" class="deck">
+                    <div id="deckCards" class="deckCards">
 
+                    </div>
                 </div>
-                <div id="cardInspector" class="deck">
+                <div id="cardInspector" class="inspector">
 
                 </div>
             </div>
